# FFmpegDemo

./: README.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/media/: player.cpp  player.h
app/src/main/cpp/media/decoder/: base_decoder.cpp  base_decoder.h  decode_state.h  i_decoder.h
app/src/main/cpp/media/decoder/video/: v_decoder.cpp  v_decoder.h
app/src/main/java/com/example/ffmpegdemo/: MainActivity.kt
app/src/main/java/com/example/ffmpegdemo/mediacodec/: AudioDecoder.kt  AudioExtractor.kt  BaseDecoder.kt  DecodeState.kt  IDecoder.kt  IDecoderStateListener.kt  IExtractor.kt  MMExtractor.kt  MediaCodecActivity.kt  VideoDecoder.kt  VideoExtractor.kt
app/src/main/java/com/example/ffmpegdemo/samplerender/: IDrawer.kt  OpenGLTools.kt  SimpleRender.kt  SimpleRenderActivity.kt  TriangleDrawer.kt
app/src/main/java/com/example/ffmpegdemo/util/: BooleanExt.kt
app/src/main/res/layout/: activity_main.xml  activity_mediacodec.xml  activity_simple_render.xml
gradle/wrapper/: gradle-wrapper.properties
